--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Treehouse</title>
   </head>
   <body>
-
-  </body>
+    <div class="wrap">
+      <div class="top">
+        <h1>Library</h1>
+        <nav>
+          <ul>
+            <li>197</li>
+            <li><img id="user-icon" src="img/user-icon.png" alt="User Icon"></li>
+            <li>&#8964;</li>
+            <li><img src="img/arrow.png" alt="User Icon"></li>
+            <li><img src="img/bell.png" alt="User Icon"></li>
+          </ul>
+        </nav>
+      </div>
+    </body>
+    </div>
 </html>
