--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="wrap">
+
       <div class="top">
         <h1>Library</h1>
         <nav>
@@ -19,6 +20,137 @@
           </ul>
         </nav>
       </div>
+
+      <div class="content">
+
+        <div class="top-left format">
+          <div class="head">
+            <div class="head-left">
+              <img src="img/book.png" alt="book-icon">
+              <p class="dot">&#9675;</p>
+              <p class="dot">&#9675;</p>
+            </div>
+            <p class="head-right">118 min</p>
+          </div>
+          <div class="foot">
+            <div class="foot-info">
+              <p>Course</p>
+              <h3>Java Annotations</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+
+            <div class="foot-buttons-left">
+              <ul>
+                <li>Java</li>
+                <li>Intermediate</li>
+              </ul>
+            </div>
+
+            <div class="foot-buttons-right">
+              <img class="play-button" src="img/play.png" alt="play button">
+              <img class="star-button" src="img/star.png" alt="star button">
+            </div>
+
+          </div>
+        </div>
+
+        <div class="top-right format">
+          <div class="right-head">
+            <div class="head-left">
+              <img src="img/book.png" alt="book-icon">
+              <p class="dot">&#9675;</p>
+              <p class="dot">&#9675;</p>
+            </div>
+            <p class="head-right">2 hours</p>
+          </div>
+          <div class="foot">
+            <div class="foot-info">
+              <p>Course</p>
+              <h3>Java Annotations</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+
+            <div class="foot-buttons-left">
+              <ul>
+                <li>Java</li>
+                <li>Intermediate</li>
+              </ul>
+            </div>
+
+            <div class="foot-buttons-right">
+              <img class="play-button" src="img/play.png" alt="play button">
+              <img class="star-button" src="img/star.png" alt="star button">
+            </div>
+
+          </div>
+        </div>
+
+        <div class="bottom-left format">
+          <div class="bottom-left-head">
+            <div class="head-left">
+              <img src="img/book.png" alt="book-icon">
+              <p class="dot">&#9675;</p>
+              <p class="dot">&#9675;</p>
+            </div>
+            <p class="head-right">3 hours</p>
+          </div>
+          <div class="foot">
+            <div class="foot-info">
+              <p>Course</p>
+              <h3>Java Annotations</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+
+            <div class="foot-buttons-left">
+              <ul>
+                <li>Java</li>
+                <li>Intermediate</li>
+              </ul>
+            </div>
+
+            <div class="foot-buttons-right">
+              <img class="play-button" src="img/play.png" alt="play button">
+              <img class="star-button" src="img/star.png" alt="star button">
+            </div>
+
+          </div>
+        </div>
+
+        <div class="bottom-right format">
+          <div class="head">
+            <div class="head-left">
+              <img src="img/book.png" alt="book-icon">
+              <p class="dot">&#9675;</p>
+              <p class="dot">&#9675;</p>
+            </div>
+            <p class="head-right">3 hours</p>
+          </div>
+          <div class="foot">
+            <div class="foot-info">
+              <p>Course</p>
+              <h3>Java Annotations</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+
+            <div class="foot-buttons-left">
+              <ul>
+                <li>Java</li>
+                <li>Intermediate</li>
+              </ul>
+            </div>
+
+            <div class="foot-buttons-right">
+              <img class="play-button" src="img/play.png" alt="play button">
+              <img class="star-button" src="img/star.png" alt="star button">
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+
+
+
     </body>
     </div>
 </html>
